--- a/store/templates/admin/store/order_print.html
+++ b/store/templates/admin/store/order_print.html
@@ -31,7 +31,7 @@
     .info-block strong {
         display: inline-block;
         width: 120px;
-        color: #555;
+        color:#eee;
     }
 
     table {
