--- a/store/templates/admin/store/order_print.html
+++ b/store/templates/admin/store/order_print.html
@@ -54,7 +54,7 @@
     }
 
     .table-footer {
-        background-color: #222 !important;
+        background-color:#6DE1D2 !important;
         color: #fff !important;
         font-weight: bold;
     }
@@ -77,7 +77,6 @@
     }
 </style>
 
-<h1>Order #{{ order.id }}</h1>
 <p class="section-title">تفاصيل الطلب #{{ order.id }}</p>
 
 <div class="section-title">معلومات العميل</div>
