copy order final67

--- a/store/templates/admin/store/order_print.html
+++ b/store/templates/admin/store/order_print.html
@@ -75,6 +75,10 @@
             display: none;
         }
     }
+    td {
+        color: #fff !important;  /* أبيض واضح داخل الصف الأسود */
+    }
+    
 </style>
 
 <p class="section-title">تفاصيل الطلب #{{ order.id }}</p>
